--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -5,6 +5,9 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,13 +21,31 @@
             prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="MainController">
    <children>
-      <Label layoutX="54.0" layoutY="108.0"/>
-      <GridPane layoutX="185.0" layoutY="108.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <menus>
+            <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Close"/>
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Delete"/>
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About"/>
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+      <GridPane alignment="CENTER" layoutX="185.0" layoutY="108.0" AnchorPane.bottomAnchor="0.0"
+                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="250.0" prefWidth="250.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0" prefWidth="300.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0"/>
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
@@ -34,10 +55,10 @@
          <children>
             <TextField fx:id="aktuellerStandField" alignment="CENTER" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets left="10.0"/>
+                  <Insets left="10.0" right="10.0"/>
                </GridPane.margin>
             </TextField>
-            <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2"
+            <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1"
                   GridPane.rowIndex="2">
                <children>
                   <Button fx:id="okButton" mnemonicParsing="false" text="OK">
@@ -55,10 +76,9 @@
                   <Insets/>
                </opaqueInsets>
                <padding>
-                  <Insets bottom="20.0" right="20.0"/>
+                  <Insets bottom="20.0" right="80.0"/>
                </padding>
             </HBox>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
                   <ComboBox fx:id="portfolio" onAction="#portfolioEnter" prefWidth="150.0">
@@ -80,12 +100,26 @@
                   <Label fx:id="gewinnLabel" prefHeight="46.0" prefWidth="104.0" text="Gewinn: xx,x€"/>
                </children>
             </VBox>
-            <ListView fx:id="investmentList" editable="true" onEditStart="#viewtest" prefHeight="200.0"
-                      prefWidth="200.0" GridPane.columnIndex="1">
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowSpan="2">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
+                        AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <ListView fx:id="investmentList" editable="true" onEditStart="#viewSelected" prefHeight="300.0"
+                                  prefWidth="200.0"/>
+                     </children>
+                  </HBox>
+               </children>
                <GridPane.margin>
-                  <Insets top="10.0"/>
+                  <Insets top="20.0"/>
                </GridPane.margin>
-            </ListView>
+            </AnchorPane>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <children>
+                  <Button fx:id="graphButton" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openGraph"
+                          text="-&gt;"/>
+               </children>
+            </AnchorPane>
          </children>
       </GridPane>
    </children>
