--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -41,7 +41,7 @@
          </menus>
       </MenuBar>
       <GridPane alignment="CENTER" layoutX="185.0" layoutY="108.0" AnchorPane.bottomAnchor="0.0"
-                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
+                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="250.0" prefWidth="250.0"/>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0" prefWidth="300.0"/>
@@ -66,7 +66,7 @@
                         <Insets right="10.0"/>
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="changeButton" mnemonicParsing="false" text="Ändern">
+                  <Button fx:id="changeButton" mnemonicParsing="false" onAction="#openEingabe" text="Ändern">
                      <HBox.margin>
                         <Insets left="10.0"/>
                      </HBox.margin>
