--- a/src/main/resources/eingabe.fxml
+++ b/src/main/resources/eingabe.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -11,89 +12,92 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/15.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="EingabeController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="EingabeController">
     <children>
-        <MenuBar layoutX="166.0" layoutY="89.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                 AnchorPane.topAnchor="0.0">
+        <MenuBar layoutX="166.0" layoutY="89.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Close"/>
-                        <MenuItem fx:id="back" mnemonicParsing="false" onAction="#goBack" text="Back"/>
+                        <MenuItem mnemonicParsing="false" text="Close" />
+                        <MenuItem fx:id="back" mnemonicParsing="false" onAction="#goBack" text="Back" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete"/>
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="About"/>
+                        <MenuItem mnemonicParsing="false" text="About" />
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
-        <GridPane alignment="CENTER" layoutX="348.0" layoutY="183.0" AnchorPane.bottomAnchor="0.0"
-                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
+        <GridPane alignment="CENTER" layoutX="348.0" layoutY="183.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2">
                     <children>
-                        <Label fx:id="pnrNameLabel" layoutX="50.0" layoutY="24.0" prefHeight="52.0" prefWidth="251.0"
-                               text="PNRName">
+                        <Label id="PNRName" fx:id="pnrNameLabel" layoutX="14.0" layoutY="24.0" prefHeight="52.0" prefWidth="251.0" text="PNRName">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <Label fx:id="einzahlungLabel" layoutX="452.0" layoutY="24.0" prefHeight="52.0"
-                               prefWidth="237.0" text="Einzahlung">
+                        <Label id="Einzahlung" fx:id="einzahlungLabel" layoutX="452.0" layoutY="24.0" prefHeight="52.0" prefWidth="237.0" text="Einzahlung">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <Label fx:id="gesStandLabel" layoutX="826.0" layoutY="24.0" prefHeight="52.0" prefWidth="265.0"
-                               text="Ges.AktuellerStand">
+                        <Label id="Ges.AktuellerStand" fx:id="gesStandLabel" layoutX="826.0" layoutY="24.0" prefHeight="52.0" prefWidth="265.0" text="Ges.AktuellerStand">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
                     </children>
                 </AnchorPane>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
                     <children>
-                        <Label fx:id="anrNameLabel" layoutX="40.0" layoutY="37.0" prefHeight="52.0" prefWidth="251.0"
-                               text="ANRName">
+                        <Label id="ANRName" fx:id="anrNameLabel" layoutX="9.0" layoutY="5.0" prefHeight="132.0" prefWidth="180.0" text="ANRName">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <Label fx:id="artLabel" layoutX="40.0" layoutY="89.0" prefHeight="52.0" prefWidth="251.0"
-                               text="Art">
+                        <Label id="Art" fx:id="artLabel" layoutX="9.0" layoutY="124.0" prefHeight="52.0" prefWidth="180.0" text="Art">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <Label fx:id="strategieLabel" layoutX="40.0" layoutY="149.0" prefHeight="52.0" prefWidth="251.0"
-                               text="Strategie">
+                        <Label id="Strategie" fx:id="strategieLabel" layoutX="817.0" layoutY="37.0" prefHeight="52.0" prefWidth="251.0" text="Strategie">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="einzahlungField" layoutX="217.0" layoutY="51.0" onAction="#speichern"
-                                   promptText="Einzahlung"/>
-                        <Label fx:id="oldEinzahlungLabel" layoutX="237.0" layoutY="81.0" text="oldEinzahlung"/>
+                        <TextField id="newEinzahlung" fx:id="newEinzahlung" layoutX="217.0" layoutY="51.0" onAction="#speichern" promptText="Einzahlung" />
+                        <Label id="old_Einzahlung" fx:id="old_Einzahlung" layoutX="217.0" layoutY="81.0" text="Einzahlung:" />
+                  <TextField id="newAnteile" fx:id="einzahlungField" layoutX="217.0" layoutY="137.0" onAction="#speichern" promptText="Anteile:" />
+                  <Label id="old_Anteile" fx:id="old_Anteil" layoutX="217.0" layoutY="175.0" text="Anteile" />
+                  <Label id="gesamt_Einzahlung" layoutX="450.0" layoutY="55.0" prefHeight="17.0" prefWidth="149.0" text="Gesamteinzahlung:" />
+                  <Label id="gesamt_Anteil" layoutX="450.0" layoutY="141.0" prefHeight="17.0" prefWidth="149.0" text="Gesamtanteil:" />
                     </children>
                 </AnchorPane>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+               <children>
+                  <TextField id="aktueller_Stand" layoutX="214.0" layoutY="113.0" prefHeight="25.0" prefWidth="161.0" promptText="Aktueller Stand" />
+                  <DatePicker id="einzahlungDatum" layoutX="510.0" layoutY="113.0" prefHeight="25.0" prefWidth="199.0" promptText="Datum" />
+                  <Label id="gewinn" layoutX="865.0" layoutY="53.0" prefHeight="17.0" prefWidth="119.0" text="Gewinn:" />
+                  <Label id="rendite" layoutX="865.0" layoutY="117.0" prefHeight="17.0" prefWidth="119.0" text="Rendite:" />
+                  <Label layoutX="214.0" layoutY="149.0" />
+               </children>
+            </AnchorPane>
             </children>
         </GridPane>
     </children>
