--- a/src/main/resources/eingabe.fxml
+++ b/src/main/resources/eingabe.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -91,11 +92,13 @@
                 </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="newAktuelllerStand" layoutX="214.0" layoutY="113.0" prefHeight="25.0" prefWidth="161.0" promptText="Aktueller Stand" />
+                  <TextField fx:id="newAktuelllerStand" layoutX="214.0" layoutY="113.0" onAction="#speichernStand" prefHeight="25.0" prefWidth="161.0" promptText="Aktueller Stand" />
                   <DatePicker fx:id="datum" layoutX="510.0" layoutY="113.0" prefHeight="25.0" prefWidth="199.0" promptText="Datum" />
                   <Label fx:id="gewinn" layoutX="865.0" layoutY="46.0" prefHeight="17.0" prefWidth="119.0" text="Gewinn:" />
                   <Label fx:id="rendite" layoutX="865.0" layoutY="117.0" prefHeight="17.0" prefWidth="119.0" text="Rendite:" />
                   <Label layoutX="214.0" layoutY="149.0" />
+                  <Button fx:id="uebernehmen" layoutX="1180.0" layoutY="258.0" mnemonicParsing="false" onAction="#uebernahme" text="Übernehmen" />
+                  <Button fx:id="zurueck" layoutX="1107.0" layoutY="258.0" mnemonicParsing="false" onAction="#back" text="Zurück" />
                </children>
             </AnchorPane>
             </children>
