--- a/src/main/resources/eingabe.fxml
+++ b/src/main/resources/eingabe.fxml
@@ -93,7 +93,7 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
                <children>
                   <TextField fx:id="newAktuelllerStand" layoutX="214.0" layoutY="113.0" onAction="#speichernStand" prefHeight="25.0" prefWidth="161.0" promptText="Aktueller Stand" />
-                  <DatePicker fx:id="datum" layoutX="510.0" layoutY="113.0" prefHeight="25.0" prefWidth="199.0" promptText="Datum" />
+                  <DatePicker fx:id="datum" layoutX="510.0" layoutY="113.0" onAction="#datepick" prefHeight="25.0" prefWidth="199.0" promptText="Datum" />
                   <Label fx:id="gewinn" layoutX="865.0" layoutY="46.0" prefHeight="17.0" prefWidth="119.0" text="Gewinn:" />
                   <Label fx:id="rendite" layoutX="865.0" layoutY="117.0" prefHeight="17.0" prefWidth="119.0" text="Rendite:" />
                   <Label layoutX="214.0" layoutY="149.0" />
