--- a/src/main/resources/eingabe.fxml
+++ b/src/main/resources/eingabe.fxml
@@ -98,7 +98,7 @@
                   <Label fx:id="rendite" layoutX="865.0" layoutY="117.0" prefHeight="17.0" prefWidth="119.0" text="Rendite:" />
                   <Label layoutX="214.0" layoutY="149.0" />
                   <Button fx:id="uebernehmen" layoutX="1180.0" layoutY="258.0" mnemonicParsing="false" onAction="#uebernahme" text="Übernehmen" />
-                  <Button fx:id="zurueck" layoutX="1107.0" layoutY="258.0" mnemonicParsing="false" onAction="#back" text="Zurück" />
+                  <Button fx:id="zurueck" layoutX="1107.0" layoutY="258.0" mnemonicParsing="false" onAction="#goBack" text="Zurück" />
                </children>
             </AnchorPane>
             </children>
